--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx8G
 
 # Mod Properties
 mod_version = 1.0.0
@@ -7,10 +7,11 @@ maven_group = com.halotroop
 archives_base_name = forging
 
 # Fabric Properties
-minecraft_version=20w10a
-yarn_mappings=20w10a+build.15
-loader_version=0.7.8+build.187
+minecraft_version=1.15.2
+yarn_mappings=1.15.2+build.15
+loader_version=0.8.2+build.194
 
+modmenu_version = 1.10.2+
 
 #Fabric api
-fabric_version=0.5.1+build.305-1.16
+fabric_version=0.10.0+build.305-1.15
