--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,14 @@ org.gradle.jvmargs=-Xmx8G
 # Mod Properties
 mod_version = 1.0.0
 maven_group = com.halotroop
-archives_base_name = forging
+archives_base_name = tconstruct
 
-# Fabric Properties
+# Dependency Properties
 minecraft_version=1.15.2
 yarn_mappings=1.15.2+build.15
 loader_version=0.8.2+build.194
+fabric_version=0.10.0+build.305-1.15
 
 modmenu_version = 1.10.2+
 
-#Fabric api
-fabric_version=0.10.0+build.305-1.15
+tech_reborn_version = 3.3.11+build.+
