--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,6 @@ fabric_version=0.10.0+build.305-1.15
 modmenu_version = 1.10.2+
 
 tech_reborn_version = 3.3.11+build.+
+rei_version = 3.6.14
+lba_version = 0.6.4
+terrestria_version = 1.2.1
