Brand new registry in testing, might replace the jank we have currently

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,7 @@ fabric_version=0.10.0+build.305-1.15
 
 modmenu_version = 1.10.2+
 
+autoconfig_version = 2.1.0
 cotton_resources_version = 1.5.1
 tech_reborn_version = 3.3.11+build.+
 rei_version = 3.6.14
