--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,6 @@ repositories {
 		url = 'https://jitpack.io/'
 	}
 	maven {
-		name = 'TehNut'
-		url "http://tehnut.info/maven"
-	}
-	maven {
 		name = "BuildCraft"
 		url = "https://mod-buildcraft.com/maven"
 	}
@@ -45,7 +41,7 @@ dependencies {
 	modApi "me.sargunvohra.mcmods:autoconfig1u:${project.autoconfig_version}"
 	include "me.sargunvohra.mcmods:autoconfig1u:${project.autoconfig_version}"
 
-	modCompile "net.devtech:rrp:2.0.2"
+	modCompile "net.devtech:arrp:0.0.3"
 	modImplementation "alexiil.mc.lib:libblockattributes-all:${project.lba_version}"
 
 //	modImplementation "com.github.shedaniel:improved-stations:0d80fc9988" // 1.2.5-1.15
