--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ autoconfig_version = 2.1.0
 cotton_resources_version = 1.5.1
 tech_reborn_version = 3.3.11+build.+
 rei_version = 3.6.14
-lba_version = 0.6.4
+univ_comp_version = 0.5.6+1.15.2
 terrestria_commit = 453b1e67a5
 
 sodium_commit = d47764902c
